# mbl

./: CMakeLists.txt  LICENSE  README.md
inc/mbl/: flags.h  lockless_state.h  shared_mem.h
src/unix/: shared_mem.cpp
tests/: lockless_state_test.cpp  mbl_test.cpp  mbl_test.h  shared_mem_test.cpp
